<resources>
    <string name="app_name">EasyBudjet</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="user_name" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>

    <string name="signup" translatable="false"><u>Sign up</u></string>
    <string name="name" translatable="false">Name</string>
    <string name="email" translatable="false">Email ID</string>
    <string name="con_password" translatable="false">Confirm Password</string>
    <string name="pin" translatable="false">PIN</string>
    <string name="phone" translatable="false">Phone</string>

    <string name="sign_up" translatable="false">Signup</string>
    <string name="cancel" translatable="false">Cancel</string>

    <string name="forgot_pass" translatable="false">Forgot your password?</string>
    <string name="dont_have_acc" translatable="false">Don\'t have an account? <u>Sign up</u></string>
    <string name="title_activity_uda_home">uda_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
