<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uda_login">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/udo_linerlayout1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/udcd_rect_bottomround_bg"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="180px"
                android:gravity="center"
                android:text="Easy"
                android:textColor="@color/primaryTextColor"
                android:textSize="45dp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="90px"
                android:gravity="top"
                android:text="Budget"
                android:textColor="@color/primaryTextColor"
                android:textSize="18dp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/udcd_rect_roundcorner_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:shadowColor="@color/ShadowColor"
                android:shadowDx="2.0"
                android:shadowDy="2.0"
                android:shadowRadius="2"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80px"
                android:text="@string/user_name"
                android:textColor="@color/colorPrimary">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.libizo.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/udet_userid"
                android:layout_marginTop="8px"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="13dp"
                app:libIZO_clearIconTint="@color/colorPrimaryDark"
                app:libIZO_setBorderColor="@color/colorPrimary"
                app:libIZO_setBorderView="true"
                app:libIZO_setClearIconVisible="true"
                app:libIZO_setCornerRadius="25dp"
                app:libIZO_setStrokeWidth="2dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16px"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"></androidx.appcompat.widget.AppCompatTextView>

            <com.libizo.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/udet_password"
                android:layout_marginTop="8px"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:inputType="textPassword"
                android:padding="5dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="13dp"
                app:libIZO_clearIconTint="@color/colorPrimaryDark"
                app:libIZO_setBorderColor="@color/colorPrimary"
                app:libIZO_setBorderView="true"
                app:libIZO_setCornerRadius="25dp"
                app:libIZO_setStrokeWidth="2dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="3px"
                android:text="@string/forgot_pass"
                android:textColor="@color/secondaryColor"
                android:textSize="11dp"
                android:textStyle="italic">

            </androidx.appcompat.widget.AppCompatTextView>

            <Button
                android:id="@+id/udbtn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:background="@drawable/udcd_rect_roundcorner_btn"
                android:text="@string/login"
                android:textColor="@color/primaryTextColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/udtv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_acc"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp"
                android:textStyle="normal">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>